@@ -142,7 +142,9 @@ class LoadingStage:
                 player = shared.world.get_active_player()
                 player.position = (0, 10, 0)
                 player.rotation = (0, 0, 0)
-                shared.state_handler.states["minecraft:world_loading"].load_or_generate("server_world")
+                shared.state_handler.states["minecraft:world_loading"].load_or_generate(
+                    "server_world"
+                )
 
             shared.mod_loader.finished = True
             return True
@@ -418,7 +420,9 @@ if shared.IS_CLIENT:
         .add_event_stage("stage:modelfactory:use", "stage:modelfactory:prepare")
         .add_event_stage("stage:modelfactory:bake", "stage:modelfactory:use")
         .add_event_stage("stage:blockstatefactory:prepare")
-        .add_event_stage("stage:blockstatefactory:use", "stage:blockstatefactory:prepare")
+        .add_event_stage(
+            "stage:blockstatefactory:use", "stage:blockstatefactory:prepare"
+        )
         .add_event_stage("stage:blockstatefactory:bake", "stage:blockstatefactory:use")
         .update_order()
     )
@@ -451,15 +455,21 @@ if shared.IS_CLIENT:
         .add_event_stage("stage:model:model_search:intern", "stage:model:model_search")
         .add_event_stage("stage:model:model_create", "stage:model:model_search:intern")
         .add_event_stage("stage:model:model_bake_prepare", "stage:model:model_create")
-        .add_event_stage("stage:model:model_bake_lookup", "stage:model:model_bake_prepare")
-        .add_event_stage("stage:model:model_bake:prepare", "stage:model:model_bake_lookup")
+        .add_event_stage(
+            "stage:model:model_bake_lookup", "stage:model:model_bake_prepare"
+        )
+        .add_event_stage(
+            "stage:model:model_bake:prepare", "stage:model:model_bake_lookup"
+        )
         .add_event_stage("stage:model:model_bake", "stage:model:model_bake:prepare")
         .add_event_stage("stage:model:item:search")
         .add_event_stage("stage:model:item:bake", "stage:model:item:search")
         .update_order()
     )
     manager.add_stage(
-        LoadingStage("minecraft:textures", "preparing texture atlases", "minecraft:models")
+        LoadingStage(
+            "minecraft:textures", "preparing texture atlases", "minecraft:models"
+        )
         .add_event_stage("stage:textureatlas:bake")
         .add_event_stage("stage:boxmodel:bake", "stage:textureatlas:bake")
         .add_event_stage("stage:block_boundingbox_get", "stage:boxmodel:bake")
